environments/demo/edge-config/non-active/2a-httpbin-vs-http.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs-http-default
  namespace: gloo-system
  labels:
    gateway-type: public
spec:
  virtualHost:
    domains:
    - 'httpbin.kapoozi.com'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-httpbin-8000
            namespace: gloo-system
