environments/demo/edge-config/non-active/2b-httpbin-vs-https.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs-https-default
  namespace: gloo-system
  labels:
    gateway-type: public
spec:
  sslConfig: # the internet-facing proxy uses TLS
    secretRef:
      name: cf-upstream-tls
      namespace: gloo-system
  virtualHost:
    domains:
    - 'httpbin.kapoozi.com'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-httpbin-8000
            namespace: gloo-system
